# mpv-socket

./: Cargo.toml  LICENSE-MIT  README.md  build.sh  cbindgen.toml
c-api/: Cargo.toml  build.sh  cbindgen.toml  gen_header.sh
c-api/include/: mpv_socket.h
c-api/src/: error.rs  lib.rs  macros.rs
examples/: observe_multiple_properties.rs  observe_property.rs
include/: MpvSocket  mpv_socket.h
src/: error.rs  event.rs  lib.rs  property.rs  protocol.rs  serde_impl.rs
src/ffi/: error.rs  macros.rs  mod.rs
