[package]
name = "mpv-socket"
version = "0.1.0"
description = "JSON-based IPC library for mpv - currently Windows only"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
edition = "2018"
repository = "https://github.com/mmitteregger/mpv-ipc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
