[package]
name = "mpv-socket-c-api"
version = "0.1.0"
description = "C API for the mpv-socket library"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
edition = "2018"

[lib]
name = "mpv_socket_c"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
mpv-socket = { path = "../" }
serde_json = "1"
libc = "0.2"
